[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = ""
version = "0.1.0"
authors = [
  { name="", email="" },
]
description = ""
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "",
  "",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://github.inl.gov/congjian-wang/RepositoryTemplate"
