[metadata]
name = repo
version = 0.1.0
description = Repository Template
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE NOTICE.txt
url = https://github.inl.gov/congjian-wang/RepositoryTemplate

[options]
packages = src

include_package_data = True

python_requires = >=3.9

install_requires =
   numpy >= 1.24


[options.entry_points]
console_scripts =
   repo_exec = src.main:main
