[metadata]
name = pythonfmu
version = attr: pythonfmu._version.__version__
author = NTNU-IHB
home-page = https://github.com/NTNU-IHB/PythonFMU
description = A lightweight framework that enables the packaging of Python3.x code as co-simulation FMUs.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
keywords = FMI
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: C++
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering
tests_require = 
	pytest
	pyfmi
	fmpy

[options]
include_package_data = True
packages = find:
zip_safe = False

[options.package_data]
pythonfmu = 
	resources/*.dll
	resources/*.dylib
	resources/*.so

[options.entry_points]
console_scripts = 
	pythonfmu = pythonfmu.__main__:cli_main

[options.extras_require]
tests = 
	pytest
	pyfmi
	fmpy

[tool:pytest]
markers =
	integration: marks integration tests
